# FastCollatz

./: README.md
henrik_code/: README.md  baseline_iterative.cpp  baseline_iterative.py  class_based_memo_collatz.py  iterative_memoized_bitshift.cpp  iterative_memoized_normal.cpp  main  main_O0  main_O3  multithreaded_bitshift.cpp  stupid_python_collatz.py  test.lst
larstvei/: Cargo.toml
larstvei/clj/: collatz_baseline.clj
larstvei/src/: iterative.rs  parallel.rs  recursive.rs
